--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="javascript.js"></script>
+        <script src="javascript.js" defer></script>
     </head>
     <body>
-        <h1>Rock Paper Scissors</h1>
+        <h1>Rock Paper Scissors Game</h1>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
     </body>
 </html>
