Add score display and 5-point win condition
Added score counter to display the running player/computer scores.
Refactored code from console logging the scores to displaying them
on the page. Added win condition at 5 points, at which point the
game restarts.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
+        <div id="gameText"></div>
+        <div>Player Score: <span id="playerScoreContainer">0</span></div>
+        <div>Computer Score: <span id="computerScoreContainer">0</span></div>
     </body>
 </html>
